--- a/polaris-sync-registry-core/pom.xml
+++ b/polaris-sync-registry-core/pom.xml
@@ -15,13 +15,32 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>polaris-sync-protobuf</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>com.tencent.polaris</groupId>
             <artifactId>polaris-protobuf</artifactId>
             <version>${polaris.java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>polaris-sync-extension</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
