--- a/polaris-sync-registry-plugins/registry-polaris/pom.xml
+++ b/polaris-sync-registry-plugins/registry-polaris/pom.xml
@@ -3,21 +3,13 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>polaris-sync</artifactId>
+        <artifactId>polaris-sync-plugins</artifactId>
         <groupId>com.tencent.polaris</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>polaris-sync-plugins</artifactId>
-    <name>Polaris Sync Plugins</name>
-    <modules>
-        <module>registry-nacos</module>
-        <module>registry-kong</module>
-        <module>registry-consul</module>
-        <module>registry-polaris</module>
-    </modules>
-    <packaging>pom</packaging>
-    <description>Polaris Sync Plugins POM</description>
+    <artifactId>registry-polaris</artifactId>
+
 
 </project>
