--- a/polaris-sync-registry-core/pom.xml
+++ b/polaris-sync-registry-core/pom.xml
@@ -20,6 +20,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>polaris-sync-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
             <version>3.12.0</version>
