feat: 增加环境变量配置

--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 polaris:
   sync:
     registry:
-      watchPath: G:\\config\\dynamic\\sync.json
-      configPath: G:\\config\\static\\sync.json
+#      watchPath: G:\\config\\dynamic\\sync.json
+#      configPath: G:\\config\\static\\sync.json
+      watchPath: ${POLARIS_SYNC_REGISTRY_WATCHPATH}
+      configPath: ${POLARIS_SYNC_REGISTRY_CONFIGPATH}
