--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     </scm>
 
     <properties>
-        <revision>0.1.0-SNAPSHOT</revision>
+        <revision>0.1.0-alpha.0</revision>
         <timestamp>${maven.build.timestamp}</timestamp>
         <!-- Spring Cloud -->
         <spring.cloud.version>2021.0.3</spring.cloud.version>
