--- a/polaris-sync-registry-plugins/pom.xml
+++ b/polaris-sync-registry-plugins/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>polaris-sync-plugins</artifactId>
+    <artifactId>polaris-sync-registry-plugins</artifactId>
     <name>Polaris Sync Registry Plugins</name>
     <modules>
         <module>registry-nacos</module>
