feat: 支持nacos默认命名空间，修复map加载的BUG

--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -6,5 +6,5 @@ polaris:
 logging:
   config: classpath:logback-sync.xml
   level:
-    root: INFO
+    root: ${POLARIS_SYNC_LOGGER_LEVEL:info}
   path: ${POLARIS_SYNC_LOGGER_PATH:loggers}
