--- a/polaris-sync-registry-plugins/registry-nacos/pom.xml
+++ b/polaris-sync-registry-plugins/registry-nacos/pom.xml
@@ -26,5 +26,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>polaris-sync-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
