feat: 支持运维接口，提供命名空间和服务列表查询能力

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <spring.boot.version>2.6.10</spring.boot.version>
         <!-- Spring Framework -->
         <spring.framework.version>5.3.22</spring.framework.version>
-        <polaris.java.version>1.7.2</polaris.java.version>
+        <polaris.java.version>1.8.0-SNAPSHOT</polaris.java.version>
         <skip.maven.deploy>false</skip.maven.deploy>
         <jacoco.version>0.8.8</jacoco.version>
         <maven.jar.plugin.version>3.0.0</maven.jar.plugin.version>
