--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+server:
+  port: 8690
+  #session-timeout: 1800
+spring:
+  application:
+    name: PolarisSyncServer
 polaris:
   sync:
     registry:
