--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>polaris-sync-server</module>
         <module>polaris-sync-commons</module>
         <module>polaris-sync-reporter-plugins</module>
+        <module>polaris-sync-config-plugins</module>
     </modules>
 
     <parent>
