--- a/polaris-sync-registry-core/pom.xml
+++ b/polaris-sync-registry-core/pom.xml
@@ -12,6 +12,18 @@
     <artifactId>polaris-sync-registry-core</artifactId>
     <name>Polaris Sync Core</name>
     <description>Polaris Sync Core JAR</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
