--- a/polaris-sync-config-plugins/config-kubernetes/pom.xml
+++ b/polaris-sync-config-plugins/config-kubernetes/pom.xml
@@ -12,6 +12,20 @@
     <artifactId>config-kubernetes</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.kubernetes</groupId>
+            <artifactId>client-java</artifactId>
+            <version>${kubernetes.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>polaris-sync-extension</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>polaris-sync-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
