--- a/polaris-sync-registry-plugins/registry-kubernetes/pom.xml
+++ b/polaris-sync-registry-plugins/registry-kubernetes/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>io.kubernetes</groupId>
             <artifactId>client-java</artifactId>
-            <version>15.0.1</version>
+            <version>${kubernetes.client.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tencent.polaris</groupId>
