--- a/polaris-sync-config-plugins/config-kubernetes/pom.xml
+++ b/polaris-sync-config-plugins/config-kubernetes/pom.xml
@@ -23,6 +23,14 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.tencent.polaris</groupId>
             <artifactId>polaris-sync-commons</artifactId>
             <version>${project.version}</version>
