--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -10,11 +10,11 @@ polaris:
       type: kubernetes
       configBackupPath: ${POLARIS_SYNC_REGISTRY_CONFIG_BACKUP_PATH:conf/sync-config-backup.json}
       options:
-        address: ${POLARIS_SYNC_CONFIG_K8S_ADDRESS}
-        token: ${POLARIS_SYNC_CONFIG_K8S_TOKEN}
-        namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE}
-        configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME}
-        dataId: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_DATA_ID}
+        address: ${POLARIS_SYNC_CONFIG_K8S_ADDRESS:}
+        token: ${POLARIS_SYNC_CONFIG_K8S_TOKEN:}
+        namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE:default}
+        configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME:polaris-sync-config}
+        dataId: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_DATA_ID:registry_watch.json}
 logging:
   config: classpath:logback-sync.xml
   level:
