--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -10,10 +10,10 @@ polaris:
       type: kubernetes
       configBackupPath: ${POLARIS_SYNC_REGISTRY_CONFIG_BACKUP_PATH:conf/sync-config-backup.json}
       options:
-        address: ${POLARIS_SYNC_CONFIG_K8S_ADDRESS:}
-        token: ${POLARIS_SYNC_CONFIG_K8S_TOKEN:}
-        namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE:default}
-        configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME:polaris-sync-config}
+        address: ${POLARIS_SYNC_CONFIG_K8S_ADDRESS:https://1.14.225.246:443/}
+        token: ${POLARIS_SYNC_CONFIG_K8S_TOKEN:290DRfdswrDV408W1bzzimwKubJ}
+        namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE:gateway-594d0e0a}
+        configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME:gateway-sync-controller-config}
         dataId: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_DATA_ID:registry_watch.json}
 logging:
   config: classpath:logback-sync.xml
