--- a/polaris-sync-registry-plugins/registry-consul/pom.xml
+++ b/polaris-sync-registry-plugins/registry-consul/pom.xml
@@ -40,5 +40,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
