--- a/polaris-sync-config-plugins/pom.xml
+++ b/polaris-sync-config-plugins/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>config-file</module>
         <module>config-kubernetes</module>
+        <module>config-etcd</module>
     </modules>
     <packaging>pom</packaging>
     <description>Polaris Sync Plugins POM</description>
