--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -15,6 +15,7 @@ polaris:
         namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE:}
         configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME:polaris-sync-config}
         dataId: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_DATA_ID:registry_watch.json}
+        watchFile: ${POLARIS_SYNC_CONFIG_FILE_WATCH:}
 logging:
   config: classpath:logback-sync.xml
   level:
