--- a/polaris-sync-server/pom.xml
+++ b/polaris-sync-server/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>com.tencent.polaris</groupId>
-            <artifactId>polaris-sync-registry-core</artifactId>
+            <artifactId>polaris-sync-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -64,17 +64,17 @@
         <!--    配置来源插件依赖    -->
         <dependency>
             <groupId>com.tencent.polaris</groupId>
-            <artifactId>config-file</artifactId>
+            <artifactId>taskconfig-file</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tencent.polaris</groupId>
-            <artifactId>config-kubernetes</artifactId>
+            <artifactId>taskconfig-kubernetes</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tencent.polaris</groupId>
-            <artifactId>config-etcd</artifactId>
+            <artifactId>taskconfig-etcd</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
