--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -8,7 +8,17 @@ polaris:
   sync:
     registry:
       configProvider: ${POLARIS_SYNC_REGISTRY_CONFIG_PROVIDER:file}
-      configBackupPath: ${POLARIS_SYNC_REGISTRY_CONFIG_BACKUP_PATH:conf/sync-config-backup.json}
+      configBackupPath: ${POLARIS_SYNC_REGISTRY_CONFIG_BACKUP_PATH:conf/registry/sync-config-backup.json}
+      options:
+        address: ${POLARIS_SYNC_CONFIG_K8S_ADDRESS:}
+        token: ${POLARIS_SYNC_CONFIG_K8S_TOKEN:}
+        namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE:}
+        configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME:polaris-sync-config}
+        dataId: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_DATA_ID:registry_watch.json}
+        watchFile: ${POLARIS_SYNC_CONFIG_FILE_WATCH:conf/sync-config.json}
+    config:
+      configProvider: ${POLARIS_SYNC_CONFIGCENTER_CONFIG_PROVIDER:file}
+      configBackupPath: ${POLARIS_SYNC_CONFIGCENTER_CONFIG_BACKUP_PATH:conf/config/sync-config-backup.json}
       options:
         address: ${POLARIS_SYNC_CONFIG_K8S_ADDRESS:}
         token: ${POLARIS_SYNC_CONFIG_K8S_TOKEN:}
