--- a/polaris-sync-server/pom.xml
+++ b/polaris-sync-server/pom.xml
@@ -25,6 +25,8 @@
             <artifactId>polaris-sync-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!--    注册中心插件    -->
         <dependency>
             <groupId>com.tencent.polaris</groupId>
             <artifactId>registry-nacos</artifactId>
@@ -50,6 +52,21 @@
             <artifactId>registry-kubernetes</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!--    配置中心插件    -->
+        <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>config-nacos</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencent.polaris</groupId>
+            <artifactId>config-polaris</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+
+        <!--    指标监控插件    -->
         <dependency>
             <groupId>com.tencent.polaris</groupId>
             <artifactId>reporter-file</artifactId>
