--- a/polaris-sync-config-plugins/config-polaris/pom.xml
+++ b/polaris-sync-config-plugins/config-polaris/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>polaris-sync-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>4.0.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
