--- a/polaris-sync-extension/pom.xml
+++ b/polaris-sync-extension/pom.xml
@@ -27,5 +27,11 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
