--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     </scm>
 
     <properties>
-        <revision>0.2.0</revision>
+        <revision>0.3.0.alpha</revision>
         <timestamp>${maven.build.timestamp}</timestamp>
         <kubernetes.client.version>15.0.1</kubernetes.client.version>
         <!-- Spring Cloud -->
