--- a/deploy/kubernetes/polaris-sync-config.yaml
+++ b/deploy/kubernetes/polaris-sync-config.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  sync-registry: |-
+  sync-registry.json: |-
     {
     	"tasks": [],
     	"methods": [
@@ -27,7 +27,7 @@ data:
     		]
     	}
     }
-  sync-config: |-
+  sync-config.json: |-
     {
     	"tasks": [],
     	"methods": [
