--- a/polaris-sync-server/src/main/resources/application.yml
+++ b/polaris-sync-server/src/main/resources/application.yml
@@ -15,7 +15,7 @@ polaris:
         namespace: ${POLARIS_SYNC_CONFIG_K8S_NAMESPACE:}
         configmapName: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_NAME:polaris-sync-config}
         dataId: ${POLARIS_SYNC_CONFIG_K8S_CONFIGMAP_DATA_ID:registry_watch.json}
-        watchFile: ${POLARIS_SYNC_REGISTRY_FILE_WATCH:conf/sync-config.json}
+        watchFile: ${POLARIS_SYNC_REGISTRY_FILE_WATCH:conf/sync-registry.json}
     config:
       configProvider: ${POLARIS_SYNC_CONFIGCENTER_CONFIG_PROVIDER:file}
       configBackupPath: ${POLARIS_SYNC_CONFIG_BACKUP_PATH:conf/config/sync-config-backup.json}
