添加 ZooKeeper 与 Polaris 之间同步dubbo服务的功能

--- a/polaris-sync-registry-plugins/pom.xml
+++ b/polaris-sync-registry-plugins/pom.xml
@@ -17,6 +17,7 @@
         <module>registry-consul</module>
         <module>registry-polaris</module>
         <module>registry-kubernetes</module>
+        <module>registry-zookeeper</module>
     </modules>
     <packaging>pom</packaging>
     <description>Polaris Sync Plugins POM</description>
